# loong_arm_control

./: .gitignore  000.ini  CMakeLists.txt  LICENSE  readme.md
model/: AzureLoong_arms.urdf  AzureLoong_v2.5_arms.urdf
src/common/: pino.cpp  pino.h
src/manager/: fsm.cpp  fsm.h  manager.cpp  manager.h  nabo.cpp  nabo.h  nabo_data.h  plan.cpp  plan.h
src/plan/: plan_action.cpp  plan_action.h  plan_main_frame.cpp  plan_main_frame.h  plan_manipulation.cpp  plan_manipulation.h  plan_recover.cpp  plan_recover.h  plan_sss.cpp  plan_sss.h
src/robot/: robot_arm.cpp  robot_arm.h  robot_config.h
src/robot/geom_sol/wrist_ofst_7dof/: fk_with_ofst.c  fk_with_ofst.h  fk_with_ofst_data.c  fk_with_ofst_data.h  fk_with_ofst_initialize.c  fk_with_ofst_initialize.h  fk_with_ofst_rtwutil.c  fk_with_ofst_rtwutil.h  fk_with_ofst_terminate.c  fk_with_ofst_terminate.h  fk_with_ofst_types.h  ik_7dof_ofst.c  ik_7dof_ofst.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h
test/: main.cpp  main.h
tools/: ethercat.sh  kill_all.sh  make.sh  py_ui_mani.py  run_mujoco.sh  run_test.sh  update_lib.sh
